--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Link/EmailExterno.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Link/EmailExterno.cshtml
@@ -1,4 +1,4 @@
-﻿<div style="background-color: white; color: #222222; font-family: arial, sans-serif; font-size: 12.8px;">
+﻿@*<div style="background-color: white; color: #222222; font-family: arial, sans-serif; font-size: 12.8px;">
     <div style="font-size: 12.8px;">
         <div style="font-size: 12.8px;">
             <div align="center" class="MsoNormal" style="background-attachment: initial; background-clip: initial; background-image: initial; background-origin: initial; background-position: initial; background-repeat: initial; background-size: initial; line-height: normal; margin-bottom: 0.0001pt; text-align: center;">
@@ -58,7 +58,7 @@
                     </i>
                 </li>
             </ol>
-            <!--[if !supportLists]--><br />
+            [if !supportLists]<br />
             <div class="MsoNormal" style="background-attachment: initial; background-clip: initial; background-image: initial; background-origin: initial; background-position: initial; background-repeat: initial; background-size: initial; line-height: normal; margin-bottom: 0.0001pt; text-align: justify;">
                 <br />
             </div>
@@ -222,12 +222,39 @@
     <div>
         <span style="font-family: &quot;arial&quot; , sans-serif; font-size: 12.8px; text-align: justify;"><br /></span>
     </div>
-</div>
-<div style="background-color: white; color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+</div>*@
+@*<div style="background-color: white; color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
     <span style="font-family: &quot;arial&quot; , sans-serif;"><br /></span>
-</div>
-<div style="background-color: white; color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+</div>*@
+@*<div style="background-color: white; color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
     <br />
+</div>*@
+
+
+<p style="font-weight: 400;">Estimado participante;</p>
+<p>Es un agrado saludarle,&nbsp;</p>
+<p>Como parte de las actividades del Taller &nbsp;"Development of Essential Skills for HR Executive" &nbsp;le hacemos llegar dos&nbsp;enlace (abajo).&nbsp;&nbsp;</p>
+<p>Por el primero (INTRUMENTO PARES), sus pares podr&aacute;n acceder a los cuestionario para evaluar sus destrezas de Trabajo en Equipo, Liderazgo y Comunicaci&oacute;n..&nbsp;&nbsp;</p>
+<p>Por el segundo (VIDEO) sus pares podr&aacute;n visualizar la presentaci&oacute;n que grab&oacute; para evaluar su habilidad de comunicaci&oacute;n. Este video deber&aacute; ser visto antes de completar dicho cuestionario.</p>
+<p style="font-weight: 400;">Estos son los pasos a seguir</p>
+<p style="font-weight: 400;">a. Elija, a por lo menos 4 personas para que contesten el instrumento. Entre ellos "deben estar necesariamente" los compa&ntilde;eros de su equipo/grupo de la maestr&iacute;a. Adicionalmente, puede solicitar&nbsp;a otros compa&ntilde;eros de clase y a compa&ntilde;eros su &aacute;mbito laboral (trabajo) que le ayuden con la evaluaci&oacute;n.&nbsp;&nbsp;A ellos les har&aacute; llegar, v&iacute;a correo, el link, INTRUMENTO PARES.</p>
+<p style="font-weight: 400;">b. En el caso de los&nbsp; "<strong>compa&ntilde;eros de su &aacute;mbito laboral (trabajo) "</strong></p>
+<ul>
+    <li>Estos "deben ser" dos o m&aacute;s, para asegurar la confidencialidad de la informaci&oacute;n.</li>
+    <li>Ind&iacute;queles que la &uacute;nica identificaci&oacute;n que dar&aacute;n es que son compa&ntilde;eros laborales (trabajo) ya que tambi&eacute;n lo estar&aacute;n evaluando sus compa&ntilde;eros de clase.</li>
+    <li>Ellos no podr&aacute;n acceder al cuestionario de comunicaciones.&nbsp;</li>
+</ul>
+<p>c. Env&iacute;e el link VIDEO; "<strong>s&oacute;lo a sus compa&ntilde;ero de clase"</strong>. Recuerde que los compa&ntilde;eros de trabajo, no tendr&aacute;n acceso al cuestionario de presentaciones.</p>
+<p>d. Indique al administrador del sistema cuantas personas (compa&ntilde;eros de clase y de trabajo) contestar&aacute;n su evaluaci&oacute;n.&nbsp;</p>
+<p style="font-weight: 400;">Es&nbsp;<strong><u>su responsabilidad</u></strong>, consultar con el administrador cuantas personas han ido contestando su evaluaci&oacute;n. Se le informar&aacute; las fechas que el administrador entregar&aacute; dicha informaci&oacute;n.&nbsp;</p>
+<p style="font-weight: 400;">Recuerde, que debe tener m&iacute;nimo 4 evaluaciones de pares. Adem&aacute;s, dado que el cuestionario es an&oacute;nimo, el administrador s&oacute;lo le podr&aacute; indicar la cantidad de personas que han contestado, pero no quienes faltan.&nbsp;</p>
+<p style="font-weight: 400;">e. Env&iacute;e el enlace a las personas (pares) que le dar&aacute;n su evaluaci&oacute;n. Puede utilizar&nbsp; las instrucciones que encontrar&aacute; en el documento adjunto a este&nbsp;correo.Observe que son diferentes para los compa&ntilde;eros de clases y los de trabajo.&nbsp;</p>
+<p style="font-weight: 400;">Si tiene alguna duda , por favor comun&iacute;quese &nbsp;con el Administrador del Sistema.</p>
+<p style="font-weight: 400;">Muchas &eacute;xitos!!</p>
+<div>
+    <div>ENLACE INSTRUMENTO:&nbsp; <a href="@ViewBag.LinkEval" style="font-size: 12.8px; text-align: justify;" target="_blank">Presione aquí.</a></div>
 </div>
-
-
+<div>&nbsp;</div>
+<div>ENLACE VIDEO: <a href="@ViewBag.LinkVideo" style="font-size: 12.8px; text-align: justify;" target="_blank">Presione aquí.</a></div>
+<div>&nbsp;</div>
+<div>ARCHIVO WORD: <a href="https://drive.google.com/file/d/0B8Wg52vRBiTaa01wUEoxRXFzMTB1ckZnMWFfeVVqdmJSMGJN/view?usp=sharing" style="font-size: 12.8px; text-align: justify;" target="_blank">Presione aquí.</a></div>
